--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul  6 01:06:12 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: generate .tar.bz2 dist tarball which saves roughly 1M.
+
 Wed Jul  5 02:55:27 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c: use birnet url launcher.
