--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,10 @@
+Thu Jul  6 22:07:54 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetutilsxx.[hc]*: moved dirname and basename into Path:: namespace.
+	added isabs(), skip_root(), join().
+
+	* tests/infotest.cc: test Path:: functions.
+
 Wed Jul  5 01:54:59 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetutils.c (birnet_url_test_show): added logic to restart browser 
