--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul  6 22:25:13 2006  Tim Janik  <timj@gtk.org>
+
+	* birnet-zintern.c: CVS copied from beast/bse/zintern/zintern.c.
+
 Thu Jul  6 22:07:54 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetutilsxx.[hc]*: moved dirname and basename into Path:: namespace.
