--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,11 @@
+Thu Jul  6 22:40:58 2006  Tim Janik  <timj@gtk.org>
+
+	* birnet-zintern.c: some fixups and renames.
+
+	* Makefile.am: build birnet-zintern.
+
+	* dummy.cc: dummy C++ file for linking C binaries.
+
 Thu Jul  6 22:25:13 2006  Tim Janik  <timj@gtk.org>
 
 	* birnet-zintern.c: CVS copied from beast/bse/zintern/zintern.c.
