--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Jul  7 02:09:16 2006  Tim Janik  <timj@gtk.org>
+
+	* configure.in: include $BIRNET_LIBS in $SFI_LIBS, leave libz checking 
+	up to birnet. 
+
 Thu Jul  6 01:06:12 2006  Tim Janik  <timj@gtk.org>
 
 	* Makefile.am: generate .tar.bz2 dist tarball which saves roughly 1M.
