--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Fri Jul  7 21:57:41 2006  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmain.c: fire up a text window with some 0.7 specific
+	release notes (inlined in bstmain.c) instead of firing up a web browser.
+
+	* beast-gtk/bstapp.c: added bug reporting link to Help/ menu.
+
+	* beast-gtk/gxk/gxktexttools.c: properly navigate to URLs even if no
+	toolbar is present.
+
+	* docs/release-notes.doxi:
+	* docs/beast-index.doxi:
+	* docs/Makefile.am: removed release-notes.html, bstmain.c has some
+	release notes inlined now.
+
 Fri Jul  7 02:17:02 2006  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/dialogs/Makefile.am: use birnet-zintern.
