--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jul  9 14:53:26 2006  Tim Janik  <timj@gtk.org>
+
+	* renamed the guile based bsesh to bsescm. adapted related build rules,
+	variable names, function names and documentation.
+
 Sun Jul  9 02:44:41 2006  Tim Janik  <timj@gtk.org>
 
 	* renamed bse_engine_garbage_collect() to bse_engine_user_thread_collect().
