--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jul  9 17:22:25 2006  Tim Janik  <timj@gtk.org>
+
+	* shell/Makefile.am: assert proper bsescm installation when
+	make check: is run.
+
 Sun Jul  9 16:15:52 2006  Tim Janik  <timj@gtk.org>
 
 	* web/news.doxi: 
