--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jul  9 18:03:39 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/Makefile.am: check po/ files for .scm string extraction.
+
 Sun Jul  9 17:22:25 2006  Tim Janik  <timj@gtk.org>
 
 	* shell/Makefile.am: assert proper bsescm installation when
