--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ RELEASE(0.7.0):
 MAYBE-RELEASE:
 - WEB: resources: http://packages.qa.debian.org/b/bse-alsa.html
 - WEB: add LAD-2005 paper to website
-- bse/bseenginemaster.c:+master_take_probes():
+- bse/bseenginemaster.c:master_take_probes():
   for the copying of VIRTUAL nodes to really work (copy correct data),
   all VIRTUALs must have been processed before any SCHEDULED nodes
   (since the latter modify the buffer pointers)
