--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Jul 15 04:49:55 2006  Tim Janik  <timj@gtk.org>
+
+	* web/news.doxi: announced CVS -> SVN move.
+
+	* web/related-links.doxi: 
+	* web/development.doxi: 
+	* web/download.doxi: changed docs from CVS to SVN for gnome.org.
+
 Thu Jul 13 21:37:26 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/Makefile.am: start bseautodoc without parsing bse rc files.
