--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jul 16 14:05:45 2006  Tim Janik  <timj@gtk.org>
+
+	* released beast-0.7.0.
+	
+	* beast-gtk/bstmain.c: updated contributor list.
+
 Sat Jul 15 05:15:42 2006  Tim Janik  <timj@gtk.org>
 
 	* library/demo/partymonster.bse:
