--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jul 16 15:53:19 2006  Tim Janik  <timj@gtk.org>
+
+	* release bse-alsa 0.7.0.
+
 Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>
 
         * drivers/bse-alsa/acbeast.m4: update.
